sofia-rs/tui/src/history_cell/snapshots/sofia_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1251
expression: rendered
---
╭─────────────────────────────────────────────────╮
│ ✨ Update available! 0.149.1 -> 9.9.9           │
│ Run pnpm add -g @ruut/sofia to update.          │
│                                                 │
│ See full release notes:                         │
│ https://github.com/openai/codex/releases/latest │
╰─────────────────────────────────────────────────╯
